RBM  update fix 11162015 - another fix for business search cards - adjusted the overflow for long business address - added fb login() for the last box.

--- a/public/css/homepage/main.css
+++ b/public/css/homepage/main.css
@@ -416,7 +416,10 @@ ul.nav {
   padding: 14px 20px;
   vertical-align: middle;
   color: #111111 !important; }
-
+#search-grid .address {
+    overflow: hidden;
+    height: 30px;
+}
 .filterwrap .btn-black {
   color: #fff;
   border-top-left-radius: 0;
